--- a/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
+++ b/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:22:03 GMT
+    - Wed, 21 Jun 2017 04:22:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QOruSeQ%2CJRQNxyP3%2C6Jpl1; path=/
+    - PHPSESSID=w-yy7oAsq1UAA6hgo8dCJ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:22:03 GMT
+recorded_at: Wed, 21 Jun 2017 04:22:31 GMT
