--- a/www.nass.gov.ng/2832b6deb4cb18ac9b03948efefb88b9b89f4fd3.yml
+++ b/www.nass.gov.ng/2832b6deb4cb18ac9b03948efefb88b9b89f4fd3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:23:04 GMT
+    - Wed, 21 Jun 2017 04:23:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0S02uRfFNDHmHLPUlrTe50; path=/
+    - PHPSESSID=mIXbaFEb1Bk69VjHj%2CB392; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:23:04 GMT
+recorded_at: Wed, 21 Jun 2017 04:23:09 GMT
