--- a/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
+++ b/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:24:27 GMT
+    - Wed, 21 Jun 2017 04:25:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ivZfC1gZjLgMq1TNgImM60; path=/
+    - PHPSESSID=xJUEtASDPXWqdJK75an%2CU0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:24:27 GMT
+recorded_at: Wed, 21 Jun 2017 04:25:36 GMT
