--- a/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
+++ b/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:25:50 GMT
+    - Wed, 21 Jun 2017 04:26:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gn6wCQ6Kjbx0uRJQ8SwPi1; path=/
+    - PHPSESSID=QMJrqKfhpEeIk5HVqy%2CPi0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:25:50 GMT
+recorded_at: Wed, 21 Jun 2017 04:26:31 GMT
