--- a/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
+++ b/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:27:54 GMT
+    - Wed, 21 Jun 2017 04:28:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2ClaUEGPwIaOXwhNP%2C-dFh2; path=/
+    - PHPSESSID=fA%2CiLLT4DGztF2qW3yBCd3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:27:54 GMT
+recorded_at: Wed, 21 Jun 2017 04:28:00 GMT
