--- a/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
+++ b/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:28:47 GMT
+    - Wed, 21 Jun 2017 04:29:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=biMykdrDW0N1LG5YUQU5Y3; path=/
+    - PHPSESSID=iFAiV8ETmEXCmdni%2ClIXE1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:28:47 GMT
+recorded_at: Wed, 21 Jun 2017 04:29:03 GMT
