--- a/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
+++ b/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:32:08 GMT
+    - Wed, 21 Jun 2017 04:32:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tBBU4ePf1bzQZSyE87J3r2; path=/
+    - PHPSESSID=4GXHZxZSe%2CtKTc3vPshm%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:32:08 GMT
+recorded_at: Wed, 21 Jun 2017 04:32:50 GMT
