--- a/www.nass.gov.ng/11fac0bcf3a54faea9f6ad90d21b2f5f9c09aa29.yml
+++ b/www.nass.gov.ng/11fac0bcf3a54faea9f6ad90d21b2f5f9c09aa29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:33:21 GMT
+    - Wed, 21 Jun 2017 04:33:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7Ow3WIlKEO%2CXE8ECTwMeS0; path=/
+    - PHPSESSID=SGm8UgaynLiGSTdM%2Ct%2CYK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:33:21 GMT
+recorded_at: Wed, 21 Jun 2017 04:33:52 GMT
