--- a/www.nass.gov.ng/9a56bdd9d41b0d0cd85dd67cd67edd9109d1e5b6.yml
+++ b/www.nass.gov.ng/9a56bdd9d41b0d0cd85dd67cd67edd9109d1e5b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:34:33 GMT
+    - Wed, 21 Jun 2017 04:36:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=paDrn3TAr776G%2CtPsdCNk1; path=/
+    - PHPSESSID=lO0ubKmJ5tqhLXhDMR1720; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:34:34 GMT
+recorded_at: Wed, 21 Jun 2017 04:36:23 GMT
