--- a/www.nass.gov.ng/891a390838a67251fec199b9385de98c9fb95ade.yml
+++ b/www.nass.gov.ng/891a390838a67251fec199b9385de98c9fb95ade.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:35:02 GMT
+    - Wed, 21 Jun 2017 04:36:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3E%2Ceu2mGs1nF5U0zg7V9n2; path=/
+    - PHPSESSID=%2CTDPymjn9z23BEWlEaz2n3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:35:02 GMT
+recorded_at: Wed, 21 Jun 2017 04:36:41 GMT
