--- a/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
+++ b/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:37:37 GMT
+    - Wed, 21 Jun 2017 04:39:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TwHs%2C7vr2DGplFFMKKFFA1; path=/
+    - PHPSESSID=DOBLS5ubVd%2COttMheGbyl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:37:37 GMT
+recorded_at: Wed, 21 Jun 2017 04:39:38 GMT
