--- a/www.nass.gov.ng/5dfc54f787daf8414997d7390381dcd678626f3f.yml
+++ b/www.nass.gov.ng/5dfc54f787daf8414997d7390381dcd678626f3f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:37:56 GMT
+    - Wed, 21 Jun 2017 04:40:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GH6Lkql-nZYHmO7SboKyt0; path=/
+    - PHPSESSID=n5CO9XEOqcH%2ClbiIKGDSi0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:37:56 GMT
+recorded_at: Wed, 21 Jun 2017 04:40:34 GMT
