--- a/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
+++ b/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:42:46 GMT
+    - Wed, 21 Jun 2017 04:46:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MFY4nTFlkxWmbJnvAE2FR3; path=/
+    - PHPSESSID=EO5CSBL%2CgB%2CvtK2aRw0m83; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:42:46 GMT
+recorded_at: Wed, 21 Jun 2017 04:46:28 GMT
