--- a/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
+++ b/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:48:53 GMT
+    - Wed, 21 Jun 2017 04:51:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IdG2oKHS5MZT3P-tK59Ne3; path=/
+    - PHPSESSID=DbO%2C0E1yFeul-9SVzAgo32; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:48:53 GMT
+recorded_at: Wed, 21 Jun 2017 04:51:36 GMT
