--- a/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
+++ b/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:49:19 GMT
+    - Wed, 21 Jun 2017 04:51:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0PVLmOEmb9GOpbBm3XWSb2; path=/
+    - PHPSESSID=qOsf7k0MP%2CCfAwkTkBF1H0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:49:19 GMT
+recorded_at: Wed, 21 Jun 2017 04:51:55 GMT
