--- a/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
+++ b/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:49:50 GMT
+    - Wed, 21 Jun 2017 04:52:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3HQG2aFjjtaFCHsxFsU7u0; path=/
+    - PHPSESSID=DazXAvO2Uj2ir%2CaPbAKfX2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:49:50 GMT
+recorded_at: Wed, 21 Jun 2017 04:52:57 GMT
