--- a/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
+++ b/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:50:37 GMT
+    - Wed, 21 Jun 2017 04:53:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kucaPruRLR4CO%2CeJbE2Tr2; path=/
+    - PHPSESSID=6LAxY7q5HTlmpvnBgcOZE1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:50:37 GMT
+recorded_at: Wed, 21 Jun 2017 04:53:44 GMT
