--- a/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
+++ b/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:53:03 GMT
+    - Wed, 21 Jun 2017 04:56:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NwwZSSAsAxA5a%2CEBlJTSz1; path=/
+    - PHPSESSID=ktAsQrYtq1JXPEWB061kU2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:53:03 GMT
+recorded_at: Wed, 21 Jun 2017 04:56:33 GMT
