--- a/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
+++ b/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:56:48 GMT
+    - Wed, 21 Jun 2017 04:59:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2s46VGzCYT70aWlbhe0Cl0; path=/
+    - PHPSESSID=PpjmPW%2CQuI6GXzmEFV9Nv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:56:48 GMT
+recorded_at: Wed, 21 Jun 2017 04:59:56 GMT
