--- a/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
+++ b/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:57:06 GMT
+    - Wed, 21 Jun 2017 05:00:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lnyXskiqm1iZBC%2CyOtvFm2; path=/
+    - PHPSESSID=PqGq0wclbAs2sYW0tdhiD1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:57:06 GMT
+recorded_at: Wed, 21 Jun 2017 05:00:17 GMT
