--- a/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
+++ b/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:58:31 GMT
+    - Wed, 21 Jun 2017 05:02:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qRuCD7XZ3jvDsG1iXDo-y1; path=/
+    - PHPSESSID=m9%2CSPodMUzvkLTm4JZNS00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:58:31 GMT
+recorded_at: Wed, 21 Jun 2017 05:02:21 GMT
