--- a/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
+++ b/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:58:54 GMT
+    - Wed, 21 Jun 2017 05:02:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=giESy23dUJZSbmu0Gi5gg0; path=/
+    - PHPSESSID=%2CK9bU-FxX4MpocIwNndSJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:58:54 GMT
+recorded_at: Wed, 21 Jun 2017 05:02:51 GMT
