--- a/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
+++ b/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:01:53 GMT
+    - Wed, 21 Jun 2017 05:06:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fHN6PApWM7j%2CPE0FapGXj2; path=/
+    - PHPSESSID=CFHErbsa6CMP3Ms-a4FbZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:01:53 GMT
+recorded_at: Wed, 21 Jun 2017 05:06:25 GMT
