--- a/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
+++ b/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:02:24 GMT
+    - Wed, 21 Jun 2017 05:06:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MzF1Rxfxlguc0d01xt5MB3; path=/
+    - PHPSESSID=5TIgPrSLTti89N33qkQd%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:02:24 GMT
+recorded_at: Wed, 21 Jun 2017 05:06:44 GMT
