--- a/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
+++ b/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:09:56 GMT
+    - Wed, 21 Jun 2017 05:15:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TgFsMim9DJ1Jc2OpXFoBo2; path=/
+    - PHPSESSID=yqeuZ-jMa21sxM3CP%2CIle3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:09:56 GMT
+recorded_at: Wed, 21 Jun 2017 05:15:06 GMT
