--- a/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
+++ b/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:11:33 GMT
+    - Wed, 21 Jun 2017 05:16:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nh%2Cpq2UdoHB7evJL8cEkY2; path=/
+    - PHPSESSID=lpSHpnLlG76CLcAK-Zwt00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:11:33 GMT
+recorded_at: Wed, 21 Jun 2017 05:16:33 GMT
