--- a/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
+++ b/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:15:13 GMT
+    - Wed, 21 Jun 2017 05:20:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7BV6Z%2C3MMib8Ten1dMf%2Ck0; path=/
+    - PHPSESSID=eTbJaSC6FJ9JIEj8wm3mo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:15:14 GMT
+recorded_at: Wed, 21 Jun 2017 05:20:05 GMT
