--- a/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
+++ b/www.nass.gov.ng/cae08c3dba331e203e695cea9c89942a46df3731.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:20:01 GMT
+    - Wed, 21 Jun 2017 05:23:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9bw%2CC41aXdS3E8BCes%2COV0; path=/
+    - PHPSESSID=LHgQhlcm0EN2213ytHBl31; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:20:01 GMT
+recorded_at: Wed, 21 Jun 2017 05:23:58 GMT
