--- a/www.nass.gov.ng/dc3487bba590a629ddd590ce07eba858210ef228.yml
+++ b/www.nass.gov.ng/dc3487bba590a629ddd590ce07eba858210ef228.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:23:02 GMT
+    - Wed, 21 Jun 2017 05:26:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m6zA0jP2xFC6stA%2CBGXlJ0; path=/
+    - PHPSESSID=X8hZks54gYLBiNTI7gSOG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:23:02 GMT
+recorded_at: Wed, 21 Jun 2017 05:26:26 GMT
