--- a/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
+++ b/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:25:26 GMT
+    - Wed, 21 Jun 2017 05:29:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6g0i5XcjF8IQ3BSIoBpcT0; path=/
+    - PHPSESSID=qvGx%2CS6VQl-zIzjVFu6zO2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:25:26 GMT
+recorded_at: Wed, 21 Jun 2017 05:29:38 GMT
