--- a/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
+++ b/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:26:54 GMT
+    - Wed, 21 Jun 2017 05:31:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z52mGzl2wwg%2Co2y08FFz42; path=/
+    - PHPSESSID=7V7cICHGD3U0UA9HgcuGK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:26:54 GMT
+recorded_at: Wed, 21 Jun 2017 05:31:39 GMT
