--- a/www.nass.gov.ng/29b4b050c51516c193b7fc2b61004574c2c786b4.yml
+++ b/www.nass.gov.ng/29b4b050c51516c193b7fc2b61004574c2c786b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:27:56 GMT
+    - Wed, 21 Jun 2017 05:32:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CkkMcA%2C3mHZcXwtNSvh-41; path=/
+    - PHPSESSID=wMe8VKZp%2CGSEq-lhUgn3%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:27:56 GMT
+recorded_at: Wed, 21 Jun 2017 05:32:39 GMT
