--- a/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
+++ b/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:29:06 GMT
+    - Wed, 21 Jun 2017 05:33:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Pxy34TuYeyv9o4TBxU3PN3; path=/
+    - PHPSESSID=Hj19TBHFw658p%2Cld3nFvJ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:29:06 GMT
+recorded_at: Wed, 21 Jun 2017 05:33:16 GMT
