--- a/www.nass.gov.ng/855e1fb217834cd93de3084c6e0930b0673eb509.yml
+++ b/www.nass.gov.ng/855e1fb217834cd93de3084c6e0930b0673eb509.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:30:26 GMT
+    - Wed, 21 Jun 2017 05:34:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N9ffVAwgwNOAbDMEbjVVU2; path=/
+    - PHPSESSID=6xCgif252gVT0eUCNHi%2Cd3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:30:27 GMT
+recorded_at: Wed, 21 Jun 2017 05:34:37 GMT
