--- a/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
+++ b/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 12:32:13 GMT
+    - Wed, 21 Jun 2017 05:35:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j%2CLyMM0fPvlJYmbfDBF9W3; path=/
+    - PHPSESSID=kb7QOj5gaW4b4DW-Zbceb0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 12:32:14 GMT
+recorded_at: Wed, 21 Jun 2017 05:35:59 GMT
