--- a/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
+++ b/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 00:59:00 GMT
+    - Thu, 22 Jun 2017 18:54:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fSOFzp0Iz9C8wTAbLlT761; path=/
+    - PHPSESSID=2EaRvivR280y%2CVnG9dWCM1; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 00:59:01 GMT
+recorded_at: Thu, 22 Jun 2017 18:54:08 GMT
