--- a/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
+++ b/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 00:59:26 GMT
+    - Thu, 22 Jun 2017 18:54:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ij0L3JIbnoarye7jAlq7l3; path=/
+    - PHPSESSID=fto8BCTzeS1%2C%2Cd8F0EKri2; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 00:59:26 GMT
+recorded_at: Thu, 22 Jun 2017 18:54:24 GMT
