--- a/www.nass.gov.ng/e55b187e09f0d9edf01c420e25e40baf4725b5ac.yml
+++ b/www.nass.gov.ng/e55b187e09f0d9edf01c420e25e40baf4725b5ac.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:03:20 GMT
+    - Thu, 22 Jun 2017 18:57:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C-7qZQY1oULNSY45OCJ550; path=/
+    - PHPSESSID=wUWoxLNiT9JP0R2mQ0eGW0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:03:20 GMT
+recorded_at: Thu, 22 Jun 2017 18:57:44 GMT
