--- a/www.nass.gov.ng/369692d4197433bda2a54a80d987c26dd4c1f2e5.yml
+++ b/www.nass.gov.ng/369692d4197433bda2a54a80d987c26dd4c1f2e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:07:14 GMT
+    - Thu, 22 Jun 2017 19:00:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xLZedWgjmvq01nVR0bIVX1; path=/
+    - PHPSESSID=R8Cr%2CwxiP6rPtkqrUS4kq1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:07:15 GMT
+recorded_at: Thu, 22 Jun 2017 19:00:25 GMT
