--- a/www.nass.gov.ng/51ed42f2595a8ca5619ffef2294204e24f36fa8c.yml
+++ b/www.nass.gov.ng/51ed42f2595a8ca5619ffef2294204e24f36fa8c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:11:42 GMT
+    - Thu, 22 Jun 2017 19:04:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tVbVshai0GKgc0%2CQiBJBK1; path=/
+    - PHPSESSID=Sppn8mnP5VmGU-3A2w5B51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:11:42 GMT
+recorded_at: Thu, 22 Jun 2017 19:04:08 GMT
