--- a/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
+++ b/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:21:41 GMT
+    - Thu, 22 Jun 2017 19:10:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TermaXR3xNcfTO0OcBCJO3; path=/
+    - PHPSESSID=Ael5mZZx9N%2Cec4y%2CNp7XV0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:21:42 GMT
+recorded_at: Thu, 22 Jun 2017 19:10:41 GMT
