--- a/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
+++ b/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:22:25 GMT
+    - Thu, 22 Jun 2017 19:12:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oGbpOCpPMT00zjB8%2CUrD91; path=/
+    - PHPSESSID=2hUFf9d2t8%2CDciR%2CcZ-z52; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:22:25 GMT
+recorded_at: Thu, 22 Jun 2017 19:12:07 GMT
