--- a/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
+++ b/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:28:13 GMT
+    - Thu, 22 Jun 2017 19:17:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zS4Q94suz5PlaMCZ3%2CxnT2; path=/
+    - PHPSESSID=OdyvwuW7BjFDeq06uWxCL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:28:13 GMT
+recorded_at: Thu, 22 Jun 2017 19:17:46 GMT
